# chmviewer4harmonyOS

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
chmlib/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
chmlib/src/main/: module.json5
chmlib/src/main/cpp/: CMakeLists.txt  napi_init.cpp
chmlib/src/main/cpp/chmlib_src/: chm_lib.c
chmlib/src/main/cpp/types/libchmlib/: Index.d.ts  oh-package.json5
chmlib/src/main/ets/components/: MainPage.ets
chmlib/src/ohosTest/: module.json5
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: AboutPage.ets  Index.ets  ReaderPage.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
